--- a/index.html
+++ b/index.html
@@ -5,8 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MNM-K9 | Your One stop Dog Shop</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Dog Training, In home dog training, Dog Grooming, Dog Daycare, Dog Boarding, Dog Shop, Dog Breeder, Husky">
+    <meta name="description" content="MNM-K9 - Your One Stop Dog Shop">
+    <meta property="og:title" content="MNM-K9">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mnmk9.ca/">
+    <meta property="og:image" content="assets/MNM_K9_R102.jpg">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400|Ubuntu:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.min.css">
+    <link rel="stylesheet" href="styles/style.css"/>
 </head>
+<!--BODY BEGINS-->
 <body>
+    <!--HEADER BEGINS-->
+    <header>
+      <div class="headerContainer">
+        <div class="logoContainer">
+          <img src="assets/MNM_K9_R102.jpg" alt="logo of MNM-K9" class="logo">
+        </div>
+  
+        <!--NAVIGATION BEGINS-->
+        <p class="hamburger"><i class="fas fa-bars"></i></p>
+        <div class="navigationContainer">
+          <nav class="menu">
+            <p class="exitResponsive"><i class="fas fa-times"></i></p>
+            <ul class="navigationMenu" id="#navigationMenu">
+              <li><a href="#About">About</a></li>
+              <li><a href="#Gallery">Gallery</a></li>
+              <li><a href="#Services">Services</a></li>
+              <li><a href="#Contact">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <!--NAVIGATION ENDS-->
+      </div>
+    </header>
+    <!--HEADER ENDS-->
+    <!--ABOUT SECTION BEGINS-->
+    <section class="about" id="About">
+        <h2 class="wrapper">About Us</h2>
+          <div class="bioContainer">
+            <div class="team wrapper">
+              <div class="teamImage">
+                <img src="assets/dadAndDogs.jpg" alt="Tyler accompanied by his husky Mukka and a daycare dog named Guiness.">
+              </div>
+              <div class="bioText">
+                <h3>Tyler</h3>
+                <p>Tyler Melnike is the owner and head trainer of MNM K9. With over six years of experience in the dog industry, he is able to work with a variety of dogs and diagnose and treat any issues they may have. Growing up in a family that always had a dog, Tyler knew from a young age that he wanted to work with animals when he grew up. Tyler has raised and trained all four of his Siberian Huskies that he currently owns. When he is not busy working with dogs or helping clients, Tyler enjoys spending his time going for trail rides and hikes with his pack and reading up on new training methods.    </p>
+              </div>
+            </div>
+  
+            <div class="team wrapper">
+              <div class="bioText">
+                <h3>Mukka</h3>
+                <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
+              </div>
+              <div class="teamImage">
+                <img src="assets/muuka.jpg" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
+              </div>
+            </div>
+  
+            <div class="team wrapper">
+              <div class="teamImage">
+                <img src="assets/nymeria.jpg" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
+              </div>
+              <div class="bioText">
+                <h3>Nymeria</h3>
+                <p>Nymeria is our five year old girl, who has mothered both litters of puppies. She has had two litters that each produced eight beautiful pups. Nymeria is an incredibily laid back girl, that loves a good belly rub, or ear scratch. Nymeria is trained in basic obedience, search and rescue, and agility. Nymeria is currently active in our breeding program.  </p>
+              </div>
+            </div>
+  
+            <div class="team wrapper">
+              <div class="bioText">
+                <h3>Fenrir</h3>
+                <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
+              </div>
+              <div class="teamImage">
+                <img src="assets/fenrir.jpg" alt="a beautiful pure white husky with bright blue eyes posing with his tongue out and his ears sticking up.">
+              </div>
+            </div>
+  
+            <div class="team wrapper">
+              <div class="teamImage">
+                <img src="assets/nova.jpg" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
+              </div>
+              <div class="bioText">
+                <h3>Nova</h3>
+                <p>Nova is our three year old girl, who was from Nymeria's first litter with our former stud Mukka. She is a very vocal and talkative husky, and loves to be the centre of attention. Novas favourite thing to do is wrestle with all the boys and climb anything she can. Nova is trained is basic obedience, sled running and bikejoring. Nova is currently active in our breeding program.</p>
+              </div>
+            </div>
+          </div>
+      </section>
+      <!--ABOUT SECTION ENDS-->
+
+    <!-- SCRIPTS -->
     <script src="./scripts/app.js"></script> 
 </body>
 </html>
