added partial file structure and added doc ready in app js and set up wow js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://mnmk9.ca/">
     <meta property="og:image" content="assets/MNM_K9_R102.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400|Ubuntu:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Roboto" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.min.css">
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
@@ -101,6 +101,12 @@
       <!--ABOUT SECTION ENDS-->
 
     <!-- SCRIPTS -->
+
+    <!-- WOW JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <!-- SMOOTH SCROLL -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js"></script>
+    <!-- APP.JS -->
     <script src="./scripts/app.js"></script> 
 </body>
 </html>
