added gallery section and added flickity in the script file for the carousel

--- a/index.html
+++ b/index.html
@@ -100,12 +100,47 @@
       </section>
       <!--ABOUT SECTION ENDS-->
 
-    <!-- SCRIPTS -->
+      <!--GALLERY SECTION STARTS-->
+    <section class="gallery" id="Gallery">
+      <h2 class="wrapper">Gallery</h2>
+      <div class="carousel">
+        <div class="carousel-cell">
+          <img src="assets/group-photo.jpg" alt="Tyler and the gang of huskies and two shepherds">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/31882792_1806353496094596_6489269029578997760_o.jpg" alt="Four huskies and two shepherds posing in front of a MNM-K9 presentation board for a community raffle event.">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/32089391_10160392766925013_1349886699051679744_o.jpg" alt="Four huskies sitting on a table with thier owner tyler standing behind them wearing a white t-shirt and sunglasses.">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/raptorsDogs.jpg" alt="An image of the back side of two huskies repping toronto raptors t-shirts for an event at the Air Canada Center.">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/gang.jpg" alt="Two shepherds (Soka and Bo) sharing a seat with Nymeria the husky on a green dog cot">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/mommaHusky.jpg" alt="Nymeria, one of Tylers female huskies - a few weeks after giving birth to her 6 puppies.">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/37079312_1895352920527986_3386962680790122496_o.jpg" alt="a group of dogs sitting on the top of a ramp posing for their next mixtape cover">
+        </div>
+        <div class="carousel-cell">
+          <img src="assets/puppygallery.jpg" alt="A 3x3 collage of Nymeria's puppies.">
+        </div>
+      </div>
+    </section>
+    <!--GALLERY SECITON ENDS-->
 
+    <!-- SCRIPTS -->
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- WOW JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <!-- SMOOTH SCROLL -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js"></script>
+    <!-- FLICKITY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.pkgd.min.js"></script>
     <!-- APP.JS -->
     <script src="./scripts/app.js"></script> 
 </body>
