added services and contact section, added more partials for styling

--- a/index.html
+++ b/index.html
@@ -132,6 +132,146 @@
     </section>
     <!--GALLERY SECITON ENDS-->
 
+     <!--SERVICES SECTION BEGINS-->
+     <section class="services" id="Services">
+      <div class="servicesContainer wrapper">
+        <h2>Services</h2>
+        <h3 class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
+        <div class="social">
+          <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+
+      <div class="dogServices wrapper">
+        <div class="card">
+          <div class="front">
+            <h3>K-9 Training</h3>
+          </div>
+          <div class="back">
+            <div class="pricing">
+              <p>In Home Training Session</p>
+              <p>$80 + HST per session</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="front">
+            <h3>Daycare</h3>
+          </div>
+          <div class="back">
+            <div class="pricing">
+              <p>Daily: $25.00</p>
+              <p>Ten day pass: $200.00</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="front">
+            <h3>Boarding</h3>
+          </div>
+          <div class="back">
+            <div class="pricing">
+              <p>One Night: $60.00</p>
+              <p>Two Nights: $90.00</p>
+              <p>Three Nights: $120.00</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="front">
+            <h3>Grooming Packages</h3>
+          </div>
+          <div class="back">
+            <div class="pricing">
+              <p>Bath and Nails: $50</p>
+              <p>Nail trim: $10</p>
+              <p>Dremul: $30</p>
+              <p>Bath: $40</p>
+              <p>Face and Feet Trim: $60</p>
+              <p>De-Shedding Package: $60</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--SERVICES SECTION ENDS-->
+
+    <!--CONTACT SECTION STARTS-->
+    <section class="contact" id="Contact">
+      <h2 class="wrapper">Contact</h2>
+      <div class="contactContainer wrapper">
+        <div class="itemContainer">
+          <div class="icon emailIcon">
+            <i class="far fa-envelope"></i>
+          </div>
+          <div class="contactLink">
+            <a href="mailto:tylermelnike@mnmk9.ca">tylermelnike@mnmk9.ca</a>
+          </div>
+        </div>
+
+        <div class="itemContainer">
+          <div class="icon phoneIcon">
+            <i class="fas fa-phone"></i>
+          </div>
+          <div class="contactLink">
+            <a href="tel:1+416-844-7990">416-844-7990</a>
+          </div>
+        </div>
+
+        <div class="itemContainer">
+          <div class="icon locationIcon">
+            <i class="fas fa-map-marker"></i>
+          </div>
+          <div class="contactLink">
+            <a href="https://goo.gl/maps/or51NyYYTWn" class="embeddedMap">Servicing GTA</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="formInfo wrapper">
+        <h3>Schedule a Tour or Request a Service</h3>
+        <p>We at MNMK-9 will get back to you within 24 hours</p>
+      </div>
+      <div class="formContainer wrapper">
+        <form action method="POST" name="callToAction" class="callToAction">
+          <select name="Services" class="formSelect">
+            <option value="DogTraining" selected>Dog Training</option>
+            <option value="Daycare">Daycare</option>
+            <option value="Boarding">Boarding</option>
+            <option value="Grooming">Grooming</option>
+          </select>
+
+          <label for="name" class="visuallyhidden">Name</label>
+          <input type="text" placeholder="Name" required>
+
+          <label for="phone" class="visuallyhidden">Phone Number</label>
+          <input type="text" placeholder="Phone Number" required>
+
+          <label for="email" class="visuallyhidden">Email</label>
+          <input type="text" placeholder="email" required>
+
+          <label for="submit" class="visuallyhidden">Submit</label>
+          <input type="submit" value="sumbit">
+        </form>
+
+        <div class="googleMap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.7587551730603!2d-79.65097378425267!3d43.507367969866216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b44821ff31767%3A0x8549a207f25fcfc0!2s2492+Harman+Ct%2C+Mississauga%2C+ON+L5J+1T8!5e0!3m2!1sen!2sca!4v1537563935316" width="550" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
+    <!--CONTACT SECTION ENDS-->
+  </main>
+  <!--MAIN ENDS-->
+
+  <!-- FOOTER STARTS -->
+  <footer>
+    <p>&copy; 2019 MNM-K9 Website built by <a href="http://www.mattvinall.com" target="_blank">Matt Vinall</p>
+  </footer>
+
     <!-- SCRIPTS -->
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
