added connect section in html, added partials, and did some general styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MNM-K9 | Your One stop Dog Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Dog Training, In home dog training, Dog Grooming, Dog Daycare, Dog Boarding, Dog Shop, Dog Breeder, Breeding,Husky, Tyler Melnike, Puppies">
+    <meta name="keywords" content="Dog Training, In home dog training, Dog Grooming, Dog Daycare, Dog Boarding, Dog Shop, Dog Breeder, Breeding,Husky, Tyler Melnike, Puppies, GTA dog training, Clarkson dog training">
     <meta name="description" content="MNM-K9 - Your One Stop Dog Shop">
     <meta property="og:title" content="MNM-K9">
     <meta property="og:type" content="website">
@@ -44,64 +44,76 @@
     </header>
     <!--HEADER ENDS-->
 
-    <!--ABOUT SECTION BEGINS-->
-    <section class="about" id="About">
-      <h2 class="wrapper">About Us</h2>
-        <div class="bioContainer">
-          <div class="team wrapper">
-            <div class="teamImage">
-              <img src="assets/dadAndDogs.jpg" alt="Tyler accompanied by his husky Mukka and a daycare dog named Guiness.">
-            </div>
-            <div class="bioText">
-              <h3>Tyler</h3>
-              <p>Tyler Melnike is the owner and head trainer of MNM K9. With over six years of experience in the dog industry, he is able to work with a variety of dogs and diagnose and treat any issues they may have. Growing up in a family that always had a dog, Tyler knew from a young age that he wanted to work with animals when he grew up. Tyler has raised and trained all four of his Siberian Huskies that he currently owns. When he is not busy working with dogs or helping clients, Tyler enjoys spending his time going for trail rides and hikes with his pack and reading up on new training methods.</p>
-            </div>
-          </div>
-  
-          <div class="team wrapper">
-            <div class="bioText">
-              <h3>Mukka</h3>
-              <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
-            </div>
-            <div class="teamImage">
-              <img src="assets/muuka.jpg" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
-            </div>
-          </div>
+  <!--CONNECT SECTION STARTS-->
+  <section class="connect">
+    <div class="socialContainer">
+      <div class="social">
+        <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.yelp.ca/biz/mnm-k-9-mississauga"><i class="fab fa-yelp"></i></a>
+      </div>
+    </div>
+  </section>
+  <!--CONNECT SECTION ENDS-->
 
-          <div class="team wrapper">
-            <div class="teamImage">
-              <img src="assets/nymeria.jpg" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
-            </div>
-            <div class="bioText">
-              <h3>Nymeria</h3>
-              <p>Nymeria is our five year old girl, who has mothered both litters of puppies. She has had two litters that each produced eight beautiful pups. Nymeria is an incredibily laid back girl, that loves a good belly rub, or ear scratch. Nymeria is trained in basic obedience, search and rescue, and agility. Nymeria is currently active in our breeding program.  </p>
-            </div>
+  <!--ABOUT SECTION BEGINS-->
+  <section class="about" id="About">
+    <h2 class="wrapper">About Us</h2>
+      <div class="bioContainer">
+        <div class="team wrapper">
+          <div class="teamImage">
+            <img src="assets/dadAndDogs.jpg" alt="Tyler accompanied by his husky Mukka and a daycare dog named Guiness.">
           </div>
-
-          <div class="team wrapper">
-            <div class="bioText">
-              <h3>Fenrir</h3>
-              <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
-            </div>
-            <div class="teamImage">
-              <img src="assets/fenrir.jpg" alt="a beautiful pure white husky with bright blue eyes posing with his tongue out and his ears sticking up.">
-            </div>
-          </div>
-
-          <div class="team wrapper">
-            <div class="teamImage">
-              <img src="assets/nova.jpg" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
-            </div>
-            <div class="bioText">
-              <h3>Nova</h3>
-              <p>Nova is our three year old girl, who was from Nymeria's first litter with our former stud Mukka. She is a very vocal and talkative husky, and loves to be the centre of attention. Novas favourite thing to do is wrestle with all the boys and climb anything she can. Nova is trained is basic obedience, sled running and bikejoring. Nova is currently active in our breeding program.</p>
-            </div>
+          <div class="bioText">
+            <h3>Tyler</h3>
+            <p>Tyler Melnike is the owner and head trainer of MNM K9. With over six years of experience in the dog industry, he is able to work with a variety of dogs and diagnose and treat any issues they may have. Growing up in a family that always had a dog, Tyler knew from a young age that he wanted to work with animals when he grew up. Tyler has raised and trained all four of his Siberian Huskies that he currently owns. When he is not busy working with dogs or helping clients, Tyler enjoys spending his time going for trail rides and hikes with his pack and reading up on new training methods.</p>
           </div>
         </div>
-      </section>
-      <!--ABOUT SECTION ENDS-->
 
-      <!--GALLERY SECTION STARTS-->
+        <div class="team wrapper">
+          <div class="bioText">
+            <h3>Mukka</h3>
+            <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
+          </div>
+          <div class="teamImage">
+            <img src="assets/muuka.jpg" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
+          </div>
+        </div>
+
+        <div class="team wrapper">
+          <div class="teamImage">
+            <img src="assets/nymeria.jpg" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
+          </div>
+          <div class="bioText">
+            <h3>Nymeria</h3>
+            <p>Nymeria is our five year old girl, who has mothered both litters of puppies. She has had two litters that each produced eight beautiful pups. Nymeria is an incredibily laid back girl, that loves a good belly rub, or ear scratch. Nymeria is trained in basic obedience, search and rescue, and agility. Nymeria is currently active in our breeding program.  </p>
+          </div>
+        </div>
+
+        <div class="team wrapper">
+          <div class="bioText">
+            <h3>Fenrir</h3>
+            <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
+          </div>
+          <div class="teamImage">
+            <img src="assets/fenrir.jpg" alt="a beautiful pure white husky with bright blue eyes posing with his tongue out and his ears sticking up.">
+          </div>
+        </div>
+
+        <div class="team wrapper">
+          <div class="teamImage">
+            <img src="assets/nova.jpg" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
+          </div>
+          <div class="bioText">
+            <h3>Nova</h3>
+            <p>Nova is our three year old girl, who was from Nymeria's first litter with our former stud Mukka. She is a very vocal and talkative husky, and loves to be the centre of attention. Novas favourite thing to do is wrestle with all the boys and climb anything she can. Nova is trained is basic obedience, sled running and bikejoring. Nova is currently active in our breeding program.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--ABOUT SECTION ENDS-->
+
+    <!--GALLERY SECTION STARTS-->
     <section class="gallery" id="Gallery">
       <h2 class="wrapper">Gallery</h2>
       <div class="carousel">
@@ -133,8 +145,8 @@
     </section>
     <!--GALLERY SECITON ENDS-->
 
-     <!--SERVICES SECTION BEGINS-->
-     <section class="services" id="Services">
+    <!--SERVICES SECTION BEGINS-->
+    <section class="services" id="Services">
       <div class="servicesContainer wrapper">
         <h2>Services</h2>
         <h3 class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
@@ -257,7 +269,7 @@
 
           <label for="submit" class="visuallyhidden">Submit</label>
           <input type="submit" value="Send">
-  
+
           <textarea placeholder="say hello" name="name"></textarea>
         </form>
 
