--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800|Roboto" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+    <link rel="stylesheet" href="styles/hover-min.css">
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
 <!--BODY BEGINS-->
@@ -32,10 +34,10 @@
           <nav class="menu">
             <p class="exitResponsive"><i class="fas fa-times"></i></p>
             <ul class="navigationMenu" id="#navigationMenu">
-              <li><a href="#About">About</a></li>
-              <li><a href="#Gallery">Gallery</a></li>
-              <li><a href="#Services">Services</a></li>
-              <li><a href="#Contact">Contact</a></li>
+              <li><a href="#About" class="hvr-underline-from-center">About</a></li>
+              <li><a href="#Gallery" class="hvr-underline-from-center">Gallery</a></li>
+              <li><a href="#Services" class="hvr-underline-from-center">Services</a></li>
+              <li><a href="#Contact" class="hvr-underline-from-center">Contact</a></li>
             </ul>
           </nav>
         </div>
