--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <div class="team wrapper">
+        <div class="team mukka wrapper">
           <div class="bioText">
             <h3>Mukka</h3>
             <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="team wrapper">
+        <div class="team fenrir wrapper">
           <div class="bioText">
             <h3>Fenrir</h3>
             <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
