finished bulk of styling on desktop

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!--CONNECT SECTION ENDS-->
 
   <!--ABOUT SECTION BEGINS-->
-  <section class="about" id="About">
+  <section class="about wow bounceInUp" data-wow-duration="2s" data-wow-offset="15" id="About">
     <h2 class="wrapper">About Us</h2>
       <div class="bioContainer">
         <div class="team wrapper">
@@ -148,10 +148,10 @@
     <!--GALLERY SECITON ENDS-->
 
     <!--SERVICES SECTION BEGINS-->
-    <section class="services" id="Services">
+    <section class="services wow slideInRight" data-wow-duration="2s" id="Services">
       <div class="servicesContainer wrapper">
         <h2>Services</h2>
-        <h3 class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
+        <p class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
         <div class="social">
           <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
@@ -216,7 +216,7 @@
     <!--SERVICES SECTION ENDS-->
 
     <!--CONTACT SECTION STARTS-->
-    <section class="contact" id="Contact">
+    <section class="contact wow slideInLeft" data-wow-duration="2s" id="Contact">
       <h2 class="wrapper">Contact</h2>
       <div class="contactContainer wrapper">
         <div class="itemContainer">
@@ -263,16 +263,13 @@
           <label for="name" class="visuallyhidden">Name</label>
           <input type="text" name="name" placeholder="Name" required>
 
-          <label for="phone" class="visuallyhidden">Phone Number</label>
-          <input type="text" placeholder="Phone Number" required>
-
           <label for="email" class="visuallyhidden">Email</label>
           <input type="text" name="_replyto" placeholder="email" required>
 
+          <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
+
           <label for="submit" class="visuallyhidden">Submit</label>
           <input type="submit" value="Send">
-
-          <textarea placeholder="say hello" name="name"></textarea>
         </form>
 
         <div class="googleMap">
@@ -284,22 +281,22 @@
   </main>
   <!--MAIN ENDS-->
 
-    <!-- FOOTER STARTS -->
-    <footer>
-      <p>&copy; 2019 MNM-K9 Website built by <a href="http://www.mattvinall.com" target="_blank">Matt Vinall</p>
-    </footer>
-    <!-- FOOTER ENDS -->
+  <!-- FOOTER STARTS -->
+  <footer>
+    <p>&copy; 2019 MNM-K9 Website built by <a href="http://www.mattvinall.com" target="_blank">Matt Vinall</a></p>
+  </footer>
+  <!-- FOOTER ENDS -->
 
-    <!-- SCRIPTS -->
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- WOW JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <!-- SMOOTH SCROLL -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js"></script>
-    <!-- FLICKITY -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.pkgd.min.js"></script>
-    <!-- APP.JS -->
-    <script src="./scripts/app.js"></script> 
+  <!-- SCRIPTS -->
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- WOW JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <!-- SMOOTH SCROLL -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js"></script>
+  <!-- FLICKITY -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.1.2/flickity.pkgd.min.js"></script>
+  <!-- APP.JS -->
+  <script src="./scripts/app.js"></script> 
 </body>
 </html>
