finishing touches on media queries

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <!--ABOUT SECTION BEGINS-->
   <section class="about wow bounceInUp" data-wow-duration="2s" data-wow-offset="15" id="About">
     <h2 class="wrapper">About Us</h2>
-      <div class="bioContainer">
-        <div class="team wrapper">
+      <div class="bioContainer wrapper">
+        <div class="team tyler">
           <div class="teamImage">
             <img src="assets/dadAndDogs.jpg" alt="Tyler accompanied by his husky Mukka and a daycare dog named Guiness.">
           </div>
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <div class="team mukka wrapper">
+        <div class="team mukka">
           <div class="bioText">
             <h3>Mukka</h3>
             <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="team wrapper">
+        <div class="team">
           <div class="teamImage">
             <img src="assets/nymeria.jpg" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
           </div>
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="team fenrir wrapper">
+        <div class="team fenrir">
           <div class="bioText">
             <h3>Fenrir</h3>
             <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <div class="team wrapper">
+        <div class="team">
           <div class="teamImage">
             <img src="assets/nova.jpg" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
           </div>
