--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!--CONNECT SECTION ENDS-->
 
   <!--ABOUT SECTION BEGINS-->
-  <section class="about wow bounceInUp" data-wow-duration="2s" data-wow-offset="15" id="About">
+  <section class="about wow bounceInUp" data-wow-duration="800ms" data-wow-offset="10" id="About">
     <h2 class="wrapper">About Us</h2>
       <div class="bioContainer wrapper">
         <div class="team tyler">
@@ -148,7 +148,7 @@
     <!--GALLERY SECITON ENDS-->
 
     <!--SERVICES SECTION BEGINS-->
-    <section class="services wow slideInRight" data-wow-duration="2s" id="Services">
+    <section class="services wow slideInRight" data-wow-duration="800ms" id="Services">
       <div class="servicesContainer wrapper">
         <h2>Services</h2>
         <p class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
@@ -216,7 +216,7 @@
     <!--SERVICES SECTION ENDS-->
 
     <!--CONTACT SECTION STARTS-->
-    <section class="contact wow slideInLeft" data-wow-duration="2s" id="Contact">
+    <section class="contact wow slideInLeft" data-wow-duration="800ms" id="Contact">
       <h2 class="wrapper">Contact</h2>
       <div class="contactContainer wrapper">
         <div class="itemContainer">
