can the bugs just stop already

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
           </div>
           <div class="back">
             <div class="pricing">
+              <p class="desktop-hidden">K-9 Training</p>
               <p>In Home Training Session</p>
               <p>$80 + HST per session</p>
             </div>
@@ -177,6 +178,7 @@
           </div>
           <div class="back">
             <div class="pricing">
+              <p class="desktop-hidden">Daycare</p>
               <p>Daily: $25.00</p>
               <p>Ten day pass: $200.00</p>
             </div>
@@ -189,6 +191,7 @@
           </div>
           <div class="back">
             <div class="pricing">
+              <p class="desktop-hidden">Boarding</p>
               <p>One Night: $60.00</p>
               <p>Two Nights: $90.00</p>
               <p>Three Nights: $120.00</p>
@@ -202,6 +205,7 @@
           </div>
           <div class="back">
             <div class="pricing">
+              <p class="desktop-hidden">Grooming Packages</p>
               <p>Bath and Nails: $50</p>
               <p>Nail trim: $10</p>
               <p>Dremul: $30</p>
