fixed margin issue on mobile for social icons

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <input type="text" name="name" placeholder="Name" required>
 
           <label for="email" class="visuallyhidden">Email</label>
-          <input type="text" name="_replyto" placeholder="email" required>
+          <input type="email" name="_replyto" placeholder="email" required>
 
           <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
 
