changed about section photos to new ones - client changed mind

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
           </div>
           <div class="teamImage">
-            <img src="assets/muuka.jpg" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
+            <img src="assets/muuka.png" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
           </div>
         </div>
 
         <div class="team">
           <div class="teamImage">
-            <img src="assets/nymeria.jpg" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
+            <img src="assets/nymeria.png" alt="a candid photo of a typical looking siberian husky with black and white fur with an arctic-like background.">
           </div>
           <div class="bioText">
             <h3>Nymeria</h3>
@@ -98,13 +98,13 @@
             <p>Fenrir is our two year old stud. He is pure white in colour with the brightest of blue eyes. Fenrir has a passion for eating as many socks as he can get his paws on, and loves to go for a good trail run. Fenrir is trained is basic obedience, sled running and bikejoring. He has fathered a litter with Nymeria. Fenrir is currently active in our breeding program. </p>
           </div>
           <div class="teamImage">
-            <img src="assets/fenrir.jpg" alt="a beautiful pure white husky with bright blue eyes posing with his tongue out and his ears sticking up.">
+            <img src="assets/fenrir.png" alt="a beautiful pure white husky with bright blue eyes posing with his tongue out and his ears sticking up.">
           </div>
         </div>
 
         <div class="team">
           <div class="teamImage">
-            <img src="assets/nova.jpg" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
+            <img src="assets/nova.png" alt="a before and after picture of Nova as a puppy versus what she looks like now - a white husky with orange/brown spots.">
           </div>
           <div class="bioText">
             <h3>Nova</h3>
