minor touch ups

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>Mukka was the pup that started it all for MNM K9. He had the highest level of training out of our pack, and was trained in advanced obedience, advanced agility, search and rescue, film work, and service work. Mukka fathered our first litter with Nymeria. He loved every dog and human he met and was always ready to greet you upon your arrival to our home. Unfortunately, Mukka passed away in April 2019. We thank him for everything he taught us. </p>
           </div>
           <div class="teamImage">
-            <img src="assets/muuka.png" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
+            <img src="assets/mukka.png" alt="an orange siberian husky lying down playing with a toy smiling at the camera.">
           </div>
         </div>
 
