--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="services wow slideInRight" data-wow-duration="800ms" id="Services">
       <div class="servicesContainer wrapper">
         <h2>Services</h2>
-        <p class="quote">&ldquo;We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!&rdquo;</h3>
+        <p class="quote">We at MNM K-9 represent the next generation of the dog industry. We provide a range of services to help owners and their canine partner become what we like to call “ single pack”. To learn to communicate with one another like you never thought was possible. Our goal is to help humans and canines live alongside each other in harmony. We strive to help every canine whether small or big, young or old, find a forever home with a loving family. Check out our Facebook and Instagram for photos!</p>
         <div class="social">
           <a href="https://www.facebook.com/ContactMNMK9/"><i class="fab fa-facebook"></i></a>
           <a href="https://www.instagram.com/mnm_k9/"><i class="fab fa-instagram"></i></a>
