fixed typos in html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="bioText">
             <h3>Nova</h3>
-            <p>Nova is our three year old girl, who was from Nymeria's first litter with our former stud Mukka. She is a very vocal and talkative husky, and loves to be the centre of attention. Novas favourite thing to do is wrestle with all the boys and climb anything she can. Nova is trained is basic obedience, sled running and bikejoring. Nova is currently active in our breeding program.</p>
+            <p>Nova is our three year old girl, who was from Nymeria's first litter with our former stud Mukka. She is a very vocal and talkative husky, and she loves to be the centre of attention. Nova's favourite thing to do is wrestle with all the boys and climb anything she can. Nova is trained in basic obedience, sled running and bikejoring. Nova is currently active in our breeding program.</p>
           </div>
         </div>
       </div>
@@ -253,7 +253,7 @@
 
       <div class="formInfo wrapper">
         <h3>Schedule a Tour or Request a Service</h3>
-        <p>We at MNMK-9 will get back to you within 24 hours</p>
+        <p>We at MNM-K9 will get back to you within 24 hours</p>
       </div>
       <div class="formContainer wrapper">
         <form action="https://formspree.io/tylermelnike@mnmk9.ca" method="POST" name="callToAction" class="callToAction">
@@ -268,12 +268,12 @@
           <input type="text" name="name" placeholder="Name" required>
 
           <label for="email" class="visuallyhidden">Email</label>
-          <input type="email" name="_replyto" placeholder="email" required>
+          <input type="email" name="_replyto" placeholder="Email" required>
 
           <textarea placeholder="How can I help you and your pup?" name="name"></textarea>
 
           <label for="submit" class="visuallyhidden">Submit</label>
-          <input type="submit" value="Send">
+          <input type="submit" value="Send" placeholder="Submit">
         </form>
 
         <div class="googleMap">
